--- a/aula12ex/ex014/style.css
+++ b/aula12ex/ex014/style.css
@@ -6,6 +6,7 @@ body{
 header{
     color: white;
     text-align: center;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.479);
 
 }
 
@@ -13,10 +14,13 @@ section{
     background: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 400px;
     margin: auto;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
-
+}
+div{
+    text-align: center;
+    padding-top: 14px;
 }
 
 footer{
