--- a/calculadora/css/styles.css
+++ b/calculadora/css/styles.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Helvetica, sans-serif;
+  /* #1a365d */
 }
 body{
   background-color: #1a365d;
